--- a/index.html
+++ b/index.html
@@ -2,11 +2,190 @@
 <html lang="pt-BR">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Despedida de Solteiro Paulo</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <!-- Font Awesome CDN -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
+
+  <title>Despedida de Solteiro - 19/07</title>
+  <style>
+    body {
+      margin: 0;
+      font-family: Arial, sans-serif;
+      background: #111;
+      color: #fff;
+      text-align: center;
+    }
+    header {
+      padding: 20px;
+      background: #c0392b;
+      font-size: 1.5em;
+      font-weight: bold;
+    }
+    .section-title {
+      margin: 30px 0 10px;
+      font-size: 1.2em;
+      color: #f1c40f;
+    }
+    .grid {
+      display: flex;
+      flex-wrap: wrap;
+      justify-content: center;
+      gap: 20px;
+      padding: 20px;
+    }
+    .card {
+      background: #222;
+      border-radius: 10px;
+      padding: 10px;
+      width: 160px;
+      box-shadow: 0 0 10px rgba(0,0,0,0.5);
+      position: relative;
+    }
+    .card img {
+      width: 100%;
+      border-radius: 10px;
+      object-fit: cover;
+    }
+    .card h3 {
+      margin: 10px 0 5px;
+    }
+    .card .tag {
+      background: #e74c3c;
+      color: white;
+      font-size: 0.8em;
+      padding: 2px 6px;
+      border-radius: 5px;
+    }
+    .overlay {
+      position: absolute;
+      top: 0;
+      left: 0;
+      background: rgba(0, 0, 0, 0.7);
+      color: #fff;
+      width: 100%;
+      height: 100%;
+      border-radius: 10px;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      font-size: 1.3em;
+      font-weight: bold;
+      transform: rotate(-15deg);
+    }
+    .buttons {
+      margin-top: 10px;
+    }
+    .buttons a {
+      display: inline-block;
+      background: #27ae60;
+      color: white;
+      text-decoration: none;
+      padding: 5px 10px;
+      border-radius: 5px;
+      margin: 3px;
+      font-size: 0.9em;
+    }
+    .buttons a.instagram {
+      background: #e1306c;
+    }
+    @media (max-width: 500px) {
+      .card {
+        width: 90%;
+      }
+    }
+    .icons {
+      margin-top: 8px;
+    }
+    .icons a {
+      color: #fff;
+      font-size: 1.4em;
+      margin: 0 10px;
+      transition: transform 0.2s ease;
+    }
+    .icons a:hover {
+      transform: scale(1.2);
+    }
+    .icons .fa-instagram {
+      color: #e1306c;
+    }
+    .icons .fa-whatsapp {
+      color: #25D366;
+    }
+
+  </style>
 </head>
 <body>
-  <h1>Despedida de Solteiro Paulo... UHULL primeira versão do site. testes de alterações</h1>
-  <h1>Testes de alterações</h1>
+
+  <header>
+    Despedida de Solteiro - Paulo 19/07 🍻
+  </header>
+
+  <div class="section-title">👑 Noivo</div>
+  <div class="grid">
+    <div class="card">
+      <img src="img/Paulo.png" alt="Noivo">
+      <div class="overlay">GAME OVER</div>
+      <h3>Paulo</h3>
+      <div class="tag">O grande dia está chegando!</div>
+    </div>
+  </div>
+
+  <div class="section-title">🍻 Tu ainda tem chance de entrar pra turma
+  </div>
+  <div class="grid">
+    <div class="card">
+      <img src="img/Rafael.png" alt="Solteiro 1">
+      <h3>Rafael Juca</h3>
+      <div class="tag">Solteiro</div>
+      <div class="icons">
+        <a href="https://www.instagram.com/rafaeljucamj" target="_blank" title="Instagram"><i class="fab fa-instagram"></i></a>
+        <a href="https://wa.me/553291975212" target="_blank" title="WhatsApp"><i class="fab fa-whatsapp"></i></a>
+      </div>
+    </div>
+    <div class="card">
+      <img src="img/Brito.png" alt="Solteiro 2">
+      <h3>Lucas Klein</h3>
+      <div class="tag">Solteiro</div>
+      <div class="icons">
+        <a href="https://www.instagram.com/lucaskleinbrito" target="_blank" title="Instagram"><i class="fab fa-instagram"></i></a>
+        <a href="https://wa.me/5551993733002" target="_blank" title="WhatsApp"><i class="fab fa-whatsapp"></i></a>
+      </div>
+    </div>
+    <div class="card">
+      <img src="img/Cristian.png" alt="Solteiro 3">
+      <h3>Cristian Morais</h3>
+      <div class="tag">Solteiro</div>
+      <div class="icons">
+        <a href="https://www.instagram.com/cristian_moraiis" target="_blank" title="Instagram"><i class="fab fa-instagram"></i></a>
+        <a href="https://wa.me/555198959963" target="_blank" title="WhatsApp"><i class="fab fa-whatsapp"></i></a>
+      </div>
+    </div>
+    <div class="card">
+      <img src="img/Rambo.png" alt="Solteiro 4">
+      <h3>Lucas Rambo</h3>
+      <div class="tag">Solteiro</div>
+      <div class="icons">
+        <a href="https://www.instagram.com/lucassrambo" target="_blank" title="Instagram"><i class="fab fa-instagram"></i></a>
+        <a href="https://wa.me/555198381276" target="_blank" title="WhatsApp"><i class="fab fa-whatsapp"></i></a>
+      </div>
+    </div>
+  </div>
+
+  <div class="section-title">💑 Fora da pista </div>
+    <div class="grid">
+      <div class="card">
+        <img src="img/Solon.png" alt="Namorando 1">
+        <div class="overlay">COMPROMETIDO</div>
+        <h3>Solon</h3>
+        <div class="tag">Se te aproximar vou te processar.</div>
+      </div>
+      <div class="card">
+        <img src="img/Max.png" alt="Namorando 2">
+        <div class="overlay">COMPROMETIDO</div>
+        <h3>Maxuel</h3>
+        <div class="tag">Se te aproximar vou pedir pro Solon te processar.</div>
+      </div>
+    </div>
+
 </body>
 </html>
