--- a/index.html
+++ b/index.html
@@ -94,20 +94,27 @@
       }
     }
     .icons {
-      margin-top: 8px;
+      margin-top: 12px;
+      display: flex;
+      justify-content: center;
+      gap: 20px;
     }
+
     .icons a {
       color: #fff;
-      font-size: 1.4em;
-      margin: 0 10px;
+      font-size: 2em; /* AUMENTADO! */
       transition: transform 0.2s ease;
+      text-align: center;
     }
+
     .icons a:hover {
       transform: scale(1.2);
     }
+
     .icons .fa-instagram {
       color: #e1306c;
     }
+
     .icons .fa-whatsapp {
       color: #25D366;
     }
