--- a/index.html
+++ b/index.html
@@ -40,6 +40,15 @@
       width: 160px;
       box-shadow: 0 0 10px rgba(0,0,0,0.5);
       position: relative;
+      opacity: 0;
+      transform: translateY(20px);
+      animation: fadeInUp 0.6s forwards;
+    }
+    @keyframes fadeInUp {
+      to {
+        opacity: 1;
+        transform: translateY(0);
+      }
     }
     .card img {
       width: 100%;
@@ -60,7 +69,7 @@
       position: absolute;
       top: 0;
       left: 0;
-      background: rgba(0, 0, 0, 0.7);
+      background: rgba(0, 0, 0, 0.5);
       color: #fff;
       width: 100%;
       height: 100%;
