--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
     </div>
   </div>
 
-  <div class="section-title">🍻 Tu ainda tem chance de entrar pra turma
+  <div class="section-title">🍻 Fora da pista
   </div>
   <div class="grid">
     <div class="card">
