--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
   <div class="grid">
     <div class="card">
       <img src="img/Rafael.png" alt="Solteiro 1">
-      <h3>Rafael Juca</h3>
+      <h3>Rafael Jucá</h3>
       <div class="tag">Solteiro</div>
       <div class="icons">
         <a href="https://www.instagram.com/rafaeljucamj" target="_blank" title="Instagram"><i class="fab fa-instagram"></i></a>
