alteracao na imagem

--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
   </div>
   <div class="grid">
     <div class="card">
-      <img src="img/Rambo.png" alt="Solteiro 1">
+      <img src="img/Rafael.png" alt="Solteiro 1">
       <h3>Rafael Jucá</h3>
       <div class="tag">Solteiro</div>
       <div class="icons">
