--- a/index.html
+++ b/index.html
@@ -27,17 +27,21 @@
       color: #f1c40f;
     }
     .grid {
-      display: flex;
-      flex-wrap: wrap;
-      justify-content: center;
+      display: grid;
+      grid-template-columns: repeat(auto-fit, minmax(160px, 1fr));
       gap: 20px;
+      padding: 20px;
+      justify-content: center;
+    }
+    .grid-single {
+      display: flex;
+      justify-content: center;
       padding: 20px;
     }
     .card {
       background: #222;
       border-radius: 10px;
       padding: 10px;
-      width: 160px;
       box-shadow: 0 0 10px rgba(0,0,0,0.5);
       position: relative;
       opacity: 0;
@@ -97,17 +101,6 @@
     .buttons a.instagram {
       background: #e1306c;
     }
-    @media (max-width: 600px) {
-      .grid {
-        gap: 10px;
-        padding: 10px;
-      }
-
-      .card {
-        width: calc(50% - 20px); /* duas colunas com margem */
-        max-width: 200px;
-      }
-    }
     .icons {
       margin-top: 12px;
       display: flex;
@@ -133,6 +126,13 @@
     .icons .fa-whatsapp {
       color: #25D366;
     }
+    @media (min-width: 768px) {
+      .grid {
+        max-width: 1200px;
+        margin: 0 auto;
+        justify-content: center;
+      }
+    }
 
   </style>
 </head>
@@ -143,7 +143,7 @@
   </header>
 
   <div class="section-title">👑 Noivo</div>
-  <div class="grid">
+  <div class="grid-single">
     <div class="card">
       <img src="img/Paulo.png" alt="Noivo">
       <div class="overlay">GAME OVER</div>
