--- a/index.html
+++ b/index.html
@@ -28,10 +28,12 @@
     }
     .grid {
       display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(160px, 1fr));
+      grid-template-columns: repeat(2, 1fr);
       gap: 20px;
       padding: 20px;
       justify-content: center;
+      max-width: 400px;
+      margin: 0 auto;
     }
     .grid-single {
       display: flex;
