--- a/index.html
+++ b/index.html
@@ -63,19 +63,20 @@
     }
     .card h3 {
       margin: 10px 0 5px;
+      font-size: 1em;
     }
     .card .tag {
       background: #e74c3c;
       color: white;
-      font-size: 0.8em;
-      padding: 2px 6px;
+      font-size: 0.9em;
+      padding: 4px 8px;
       border-radius: 5px;
     }
     .overlay {
       position: absolute;
       top: 0;
       left: 0;
-      background: rgba(0, 0, 0, 0.5);
+      background: rgba(200, 200, 200, 0.3); /* <-- aqui o ajuste */
       color: #fff;
       width: 100%;
       height: 100%;
@@ -134,6 +135,7 @@
         margin: 0 auto;
         justify-content: center;
       }
+      
     }
 
   </style>
