adicionado contador de acessos

--- a/index.html
+++ b/index.html
@@ -213,5 +213,12 @@
       </div>
     </div>
 
+
+
+<footer style="margin: 40px 0; text-align: center; font-size: 0.9em; color: #888;">
+  <img src="https://visitor-badge.laobi.icu/badge?page_id=despedida.paulo.portoalegre.2025" 
+       alt="Contador de acessos" />
+</footer>
+
 </body>
 </html>
