--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
     </div>
   </div>
 
-  <div class="section-title">🍻 Na pista
+  <div class="section-title">🍻 Na pista, conquiste teu drink.
   </div>
   <div class="grid">
     <div class="card">
